// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no props 1`] = `
<div
  tabIndex="-1"
>
  <div
    className="messageContainer"
    tabIndex="-1"
  >
    <div
      className="clickableIcon "
      style={
        Object {
          "cursor": "initial",
          "height": "100px",
          "width": "100px",
        }
      }
      tabIndex="-1"
    >
      <img
        alt="Nutzer"
        src="account_icon_black.svg"
        tabIndex="-1"
      />
    </div>
    <div
      className="messageDataContainer"
      tabIndex="0"
    >
      <div
        className="messageText black-text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
      <div
        className="messageTimeSent"
      />
    </div>
  </div>
  <div
    className="richContentContainer"
    tabIndex="-1"
  >
    <div
      className="buttonsContainer"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`renders no button with single invalid button visualization 1`] = `
<div
  tabIndex="-1"
>
  <div
    className="messageContainer"
    tabIndex="-1"
  >
    <div
      className="clickableIcon "
      style={
        Object {
          "cursor": "initial",
          "height": "100px",
          "width": "100px",
        }
      }
      tabIndex="-1"
    >
      <img
        alt="Nutzer"
        src="account_icon_black.svg"
        tabIndex="-1"
      />
    </div>
    <div
      className="messageDataContainer"
      tabIndex="0"
    >
      <div
        className="messageText black-text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
      <div
        className="messageTimeSent"
      />
    </div>
  </div>
  <div
    className="richContentContainer"
    tabIndex="-1"
  >
    <div
      className="buttonsContainer"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`renders one button with single valid button visualization as input 1`] = `
<div
  tabIndex="-1"
>
  <div
    className="messageContainer"
    tabIndex="-1"
  >
    <div
      className="clickableIcon "
      style={
        Object {
          "cursor": "initial",
          "height": "100px",
          "width": "100px",
        }
      }
      tabIndex="-1"
    >
      <img
        alt="Nutzer"
        src="account_icon_black.svg"
        tabIndex="-1"
      />
    </div>
    <div
      className="messageDataContainer"
      tabIndex="0"
    >
      <div
        className="messageText black-text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
      <div
        className="messageTimeSent"
      />
    </div>
  </div>
  <div
    className="richContentContainer"
    tabIndex="-1"
  >
    <div
      className="buttonsContainer"
      tabIndex="-1"
    >
      <button
        className="button "
        style={
          Object {
            "height": "35px",
            "minWidth": "100px",
          }
        }
      >
        test
      </button>
    </div>
  </div>
</div>
`;

exports[`renders two distinct buttons with two valid, distinct button visualization as input 1`] = `
<div
  tabIndex="-1"
>
  <div
    className="messageContainer"
    tabIndex="-1"
  >
    <div
      className="clickableIcon "
      style={
        Object {
          "cursor": "initial",
          "height": "100px",
          "width": "100px",
        }
      }
      tabIndex="-1"
    >
      <img
        alt="Nutzer"
        src="account_icon_black.svg"
        tabIndex="-1"
      />
    </div>
    <div
      className="messageDataContainer"
      tabIndex="0"
    >
      <div
        className="messageText black-text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
      <div
        className="messageTimeSent"
      />
    </div>
  </div>
  <div
    className="richContentContainer"
    tabIndex="-1"
  >
    <div
      className="buttonsContainer"
      tabIndex="-1"
    >
      <button
        className="button "
        style={
          Object {
            "height": "35px",
            "minWidth": "100px",
          }
        }
      >
        test
      </button>
      <button
        className="button "
        style={
          Object {
            "height": "35px",
            "minWidth": "100px",
          }
        }
      >
        test2
      </button>
    </div>
  </div>
</div>
`;

exports[`renders two distinct buttons with two valid, equal button visualizations as input 1`] = `
<div
  tabIndex="-1"
>
  <div
    className="messageContainer"
    tabIndex="-1"
  >
    <div
      className="clickableIcon "
      style={
        Object {
          "cursor": "initial",
          "height": "100px",
          "width": "100px",
        }
      }
      tabIndex="-1"
    >
      <img
        alt="Nutzer"
        src="account_icon_black.svg"
        tabIndex="-1"
      />
    </div>
    <div
      className="messageDataContainer"
      tabIndex="0"
    >
      <div
        className="messageText black-text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
      <div
        className="messageTimeSent"
      />
    </div>
  </div>
  <div
    className="richContentContainer"
    tabIndex="-1"
  >
    <div
      className="buttonsContainer"
      tabIndex="-1"
    >
      <button
        className="button "
        style={
          Object {
            "height": "35px",
            "minWidth": "100px",
          }
        }
      >
        test
      </button>
      <button
        className="button "
        style={
          Object {
            "height": "35px",
            "minWidth": "100px",
          }
        }
      >
        test
      </button>
    </div>
  </div>
</div>
`;
